# Cost-Multi-Agent-System

./: .gitignore  README.md  pyproject.toml
tokenops/: __init__.py  cli.py  llm.py  orchestrator.py  pricing.py  store.py
tokenops/agents/: base.py  cache_strategist.py  cost_analyst.py  forecaster.py  model_advisor.py  policy_engine.py  prompt_optimizer.py  usage_monitor.py  waste_detector.py
