[project]
name = "tokenops"
version = "0.1.0"
description = "Multi-agent system for LLM API cost management"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
llm = ["anthropic>=0.90"]

[project.scripts]
tokenops = "tokenops.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
